--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-highlight": "^0.12.2",
     "node-sass": "^5.0.0",
     "react-highlight": "^0.14.0",
-    "react-markdown": "^6.0.0"
+    "react-markdown": "^6.0.0",
+    "remark-gfm": "^1.0.0"
   }
 }
