--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -13,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
@@ -45,6 +49,7 @@
   },
   "devDependencies": {
     "@types/react-highlight": "^0.12.2",
+    "@types/react-transition-group": "^4.4.1",
     "node-sass": "^5.0.0",
     "react-highlight": "^0.14.0",
     "react-markdown": "^6.0.0",
