--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: node_js
 node_js:
   - 12
 cache:
+  npm: false
   directories:
-  - node_modules
+    - $HOME/.npm
 env:
   - CI=true
 script:
